--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,6 +8,8 @@ pipeline {
     stages {
         stage('Build') { 
             steps {
+		sh pwd
+		sh ls -l
                 sh 'mvn -X -e -B -DskipTests clean package' 
             }
         }
