--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,9 @@ pipeline {
     stages {
         stage('Build') { 
             steps {
-                sh 'mvn -X -e -B -DskipTests clean package' 
+		sh 'pwd'
+		sh 'ls -l'
+                sh 'mvn   -X   -e   -B -DskipTests clean package' 
             }
         }
     }
